# NoteNest

./: README.md
.github/workflows/: rust.yml
backend/: Cargo.toml  README.md
backend/src/: dependency.rs  main.rs
frontend/: 404.html  accountcreation.html  home.html  index.html  login.html  playlists.html  style.css
