[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
firebase-rs = "2.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.13.0", features = ["full"] }
settimeout = "0.1.2"
bcrypt = "0.15.0"
reqwest = { version = "x", features = ["blocking"] }
chrono = "0.4.28"
poem = "x"
poem-openapi = "x"
